--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="686771">  <td>23/03/18 16:18:39</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.closure()[pri:0, instance:pageclass.AccountTest@909217e]">&lt;&lt;closure</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1093864783</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/03/18 16:18:31</td>   <td>-8518</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTest.config()[pri:0, instance:pageclass.AccountTest@909217e]">&gt;&gt;config</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1093864783</td>   <td></td> </tr>
-<tr bgcolor="686771">  <td>23/03/18 16:18:38</td>   <td>-1500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.success()[pri:0, instance:pageclass.AccountTest@909217e]">success</td> 
-  <td>main@1093864783</td>   <td></td> </tr>
+<tr bgcolor="f095f8">  <td>23/03/18 19:49:22</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.closure()[pri:0, instance:pageclass.LoginTest@645aa696]">&lt;&lt;closure</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@502848122</td>   <td></td> </tr>
+<tr bgcolor="f095f8">  <td>23/03/18 19:49:13</td>   <td>-8624</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.config()[pri:0, instance:pageclass.LoginTest@645aa696]">&gt;&gt;config</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@502848122</td>   <td></td> </tr>
 </table>
