--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9717e">  <td>23/03/18 16:20:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.faillogintest()[pri:0, instance:pageclass.LoginTest@48075da3]">faillogintest</td> 
-  <td>main@1569754439</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>23/03/18 16:20:34</td>   <td>1192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logintest()[pri:0, instance:pageclass.LoginTest@48075da3]">logintest</td> 
-  <td>main@1569754439</td>   <td></td> </tr>
-<tr bgcolor="8ed89b">  <td>23/03/18 16:20:40</td>   <td>6922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTest.success()[pri:0, instance:pageclass.AccountTest@413d1baf]">success</td> 
-  <td>main@1569754439</td>   <td></td> </tr>
-<tr bgcolor="8ed89b">  <td>23/03/18 16:20:35</td>   <td>2414</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTest.config()[pri:0, instance:pageclass.AccountTest@413d1baf]">&gt;&gt;config</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1569754439</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>23/03/18 16:20:42</td>   <td>9173</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.closure()[pri:0, instance:pageclass.LoginTest@48075da3]">&lt;&lt;closure</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1569754439</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>23/03/18 16:20:26</td>   <td>-7074</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.config()[pri:0, instance:pageclass.LoginTest@48075da3]">&gt;&gt;config</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1569754439</td>   <td></td> </tr>
-<tr bgcolor="8ed89b">  <td>23/03/18 16:20:41</td>   <td>8387</td> <td>&nbsp;</td><td title="&lt;&lt;AccountTest.closure()[pri:0, instance:pageclass.AccountTest@413d1baf]">&lt;&lt;closure</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1569754439</td>   <td></td> </tr>
+<tr bgcolor="fecb8b">  <td>23/03/20 11:37:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.config()[pri:0, instance:pageclass.LoginTest@7a35b0f5]">&gt;&gt;config</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="fecb8b">  <td>23/03/20 11:37:03</td>   <td>571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logintest(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:pageclass.LoginTest@7a35b0f5]">logintest</td> 
+  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="fecb8b">  <td>23/03/20 11:37:11</td>   <td>8412</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.closure()[pri:0, instance:pageclass.LoginTest@7a35b0f5]">&lt;&lt;closure</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
 </table>
